--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.watfoe.com/i/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.watfoe.com/i/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.watfoe.com/i/favicon-16x16.png">
+	<meta name="viewport" content="width=device-width" />
+	<link rel="manifest" href="https://cdn.watfoe.com/m/site.webmanifest">
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
