--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+	<link rel="preconnect" href="https://cdn.watfoe.com">
 	<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.watfoe.com/i/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.watfoe.com/i/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.watfoe.com/i/favicon-16x16.png">
